2011-02-02 Pierre Wieser <pwieser@trychlos.org>

	Rename nact-gtk-utils to base-gtk-utils and merge base-iprefs into it

	* src/nact/base-iprefs.c:
	* src/nact/base-iprefs.c: Removed files.

	* src/nact/Makefile.am:
	* src/nact/base-gtk-utils.c:
	* src/nact/base-gtk-utils.h:
	* src/nact/base-window.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-export-format.c:
	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icon-chooser.c:
	* src/nact/nact-ienvironment-tab.c:
	* src/nact/nact-iexecution-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-iproperties-tab.c:
	* src/nact/nact-ischemes-tab.c:
	* src/nact/nact-main-statusbar.c:
	* src/nact/nact-main-window.c:
	* src/nact/nact-match-list.c:
	* src/nact/nact-preferences-editor.c:
	* src/nact/nact-providers-list.c:
	* src/nact/nact-schemes-list.c:
	* src/nact/nact-tree-model.c: Updated accordingly.

	Convert the get_wp_id() BaseIPrefsInterface method to "base-window-wsp-name"
	BaseWindow property

	* src/core/na-settings.c:
	* src/core/na-settings.h: New NA_IPREFS_CONFIRM_LOGOUT_WSP user preference.

	* src/nact/base-iprefs.c:
	* src/nact/base-iprefs.h
	(base_iprefs_position_named_window, base_iprefs_save_named_window_position):
	Removed functions.
	(get_wsp_id): Remove interface method.

	* src/nact/base-window.c:
	* src/nact/base-window.h: New BASE_PROP_WSP_NAME BaseWindow property.

	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-confirm-logout.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icon-chooser.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-main-window.c:
	* src/nact/nact-preferences-editor.c: Updated accordingly.

	* src/core/na-updater.c: